<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
    android:background="#ff2db2ff"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question_text"
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="normal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy_button_text"
        android:id="@+id/easyButton"
        android:background="@drawable/first_button_shape"
        android:clickable="false"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medium_button_text"
        android:id="@+id/mediumButton"
        android:background="@drawable/second_button_shape"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard_button_text"
        android:id="@+id/hardButton"
        android:background="@drawable/third_button_shape"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_button_text"
        android:id="@+id/stopButton"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/stop_button_shape" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/volume_text"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textStyle="normal"
        android:textSize="15sp" /><![CDATA[

    " />
]]>
</LinearLayout>
